# DGAT-Stackelberg-Game

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: 01_datasets.md  02_baselines.md  03_method_design.md
experiments/: cfg_5fold_ours.yaml  cfg_5fold_vanilla.yaml  cfg_default.yaml  cfg_full.yaml  cfg_quick.yaml  cfg_vanilla.yaml  cfg_vanilla_full.yaml
scripts/download/: calce.sh  hust.sh  mit_huggingface.sh  mit_raw_huggingface.sh  mit_stanford.sh
scripts/run/: analyse_sweep.py  analyze_proto_v2.py  bench_hsmm.py  compare_dgat_plus_paired.py  compare_dgat_vs_plus.py  diagnose_errors.py  diagnose_fold0.py  diagnose_v3.py  ensemble_4methods.py  ensemble_8seed_tta.py  ensemble_all_models.py  ensemble_ct_dgat.py  ensemble_eval.py  ensemble_multi_seed.py  eval_cross_domain.py  eval_hust_crossdomain.py  inspect_data.py  inspect_mat.py  inspect_schema.sh  inspect_tensor.py  paired_ttest.py  percell_ttest_dgat_plus.py  plot_dgatp_composite.py  plot_graphical_abstract.py  run_severson_baseline.py  run_severson_v2.py  run_sota_ensembles.sh  smoke_test.py  summarize_dgatp_composite.py  sweep_main_table.py  sweep_multi_seed.py  sweep_protocol_ext.py  task_b_charging_opt.py  test_calce.py  test_dgat_plus.py  test_dgat_plus_composite.py  test_lstm.py  test_sota.py  ttest_dgatp_composite.py  viz_diag_v3.py  (+2 more)
scripts/setup/: install.sh
src/battery_paper/: __init__.py  train.py
src/battery_paper/data/: __init__.py  bsebench_loader.py  calce_loader.py  dataset.py  hust_loader.py  mit_loader.py  mit_meta.py  mit_summary.py
(+20 files in other folders)
