[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battery_paper"
version = "0.1.0"
description = "HSMM-GraphGame: joint fast-charging protocol & life prediction for Li-ion batteries"
authors = [{ name = "WM" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "h5py>=3.9",
    "pyyaml",
    "tqdm",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "networkx>=3.1",
    "hmmlearn>=0.3",
]

[project.optional-dependencies]
dl = [
    "torch>=2.2",
    "torch_geometric>=2.5",
    "transformers>=4.42",
]
rl = [
    "stable-baselines3>=2.3",
    "gymnasium>=0.29",
    "botorch>=0.11",
    "gpytorch>=1.12",
]
dev = ["pytest", "pytest-xdist", "ruff", "black", "isort"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
